--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.5",
     "hogan-express": "^0.5.2",
+    "negotiator": "^0.6.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "request": "^2.69.0"
